<resources>
    <string name="app_name">Taller_2</string>
    <string name="NombreCam">CamilaMurcia</string>
    <string name="BienvenidaApp">MindSoulHeart</string>
    <string name="MsjInvitacion">Inicia una nueva aventura con MindSoulHeart y descubre una nueva forma de ver el mundo</string>
    <string name="btnSiguienteLogin">Comienza</string>
    <string name="MnjInvitacion2">Registrate</string>
    <string name="MsjInicioSesion">La aventura está por iniciar, por favor inicia sesion</string>
    <string name="btnIngresar">Ingresar</string>
    <string name="MsjRecuperaContra">Recupera Tu Contraseña</string>
    <string name="NombreLogin">Nombre</string>
    <string name="Contra">Contraseña</string>
    <string name="btnIngresGoogle">Ingresar con Google</string>
    <string name="linkRegistro">Regístrate</string>
    <string name="preguntaRegistro">¿No tienes cuenta?</string>
    <string name="TituloRegistrate">Datos Personales</string>
    <string name="Apellidos">Apellidos</string>
    <string name="g_nero">Género</string>
    <string name="Edad">Edad</string>
    <string name="fecha_de_nacimiento">Fecha de nacimiento</string>
    <string name="eps_aficilia">EPS de afiliación</string>
    <string name="regre_login">¿Ya tienes una cuenta? Regresar al login</string>
    <string name="Sigui">Siguiente</string>
    <string name="TituloRegistrate2">Datos de registro</string>
    <string name="direccion">Dirección</string>
    <string name="ciudad">Ciudad</string>
    <string name="telefono_celular">Telefono/Celular</string>
    <string name="correo_electronico">Correo electronico</string>
    <string name="contrasena">Contraseña</string>
    <string name="confirme_contrasena">Confirme su contraseña</string>
    <string name="terminos_condiciones">Acepta terminos y condiciones</string>
    <string name="registrarse">Registrarse</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="mis_servicios">Mis servicios</string>
    <string name="inicio">Inicio</string>
    <string name="catalogo">Catalogo</string>
    <string name="carrito">Carrito</string>
    <string name="favoritos">Favoritos</string>
    <string name="administrador">Administrador</string>
    <string name="usuarios">Usuarios</string>
    <string name="perfil">Perfil</string>
    <string name="navigation_drawer_open">menu_abierto</string>
    <string name="navigation_drawer_close">menu_cerrado</string>
    <string name="productosDestacados">Productos Destacados</string>
    <string name="imagen_del_producto">Imagen del Producto</string>
    <string name="agregar">Agregar</string>
    <string name="todos_los_productos_disponibles">Todos los productos disponibles</string>
    <string name="datos_de_localizacion">Datos de localización del usuario</string>
    <string name="credenciales_del_usuario">Credenciales del usuario</string>
    <string name="editar">Editar</string>
    <string name="perfil_de_usuario">Perfil de Usuario</string>
    <string name="cerrar_sesion">Cerrar Sesion</string>
    <string name="ingresar_con_huella">Ingresar con huella</string>
    <string name="editar_perfil">Editar Perfil</string>
    <string name="foto_de_perfil">Foto de perfil</string>
    <string name="edita_perfil">Editar Perfil</string>
    <string name="guardar_cambios">Guardar Cambios</string>
    <string name="cambiar_foto">Cambiar Foto</string>
</resources>