<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/registro"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/BackgroundPrimary"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".activities.Registro">

    <LinearLayout
        android:id="@+id/Encabezado"
        android:layout_width="420dp"
        android:layout_height="80dp"
        android:layout_marginTop="-15dp"
        android:background="@color/BordeBotones"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/logoHome"
            android:layout_width="83dp"
            android:layout_height="62dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            app:srcCompat="@drawable/logo" />

        <TextView
            android:id="@+id/MindSoulHeart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="serif"
            android:text="@string/BienvenidaApp"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="28sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="65dp"
            android:layout_height="50dp"
            android:layout_marginStart="15dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/ic_user" />

    </LinearLayout>

    <TextView
        android:id="@+id/TtlRegidtro"
        android:layout_width="265dp"
        android:layout_height="41dp"
        android:layout_marginTop="10dp"
        android:fontFamily="serif"
        android:text="@string/TituloRegistrate"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="italic" />

    <LinearLayout
        android:layout_width="385dp"
        android:layout_height="400dp"
        android:gravity="center"
        android:orientation="vertical">

        <EditText
            android:id="@+id/Nombre"
            android:layout_width="360dp"
            android:layout_height="48dp"
            android:background="@drawable/style_edittext"
            android:ems="10"
            android:hint="@string/NombreLogin"
            android:paddingStart="10dp"
            android:textColor="@color/BackgroundPrimary" />

        <EditText
            android:id="@+id/Apellidos"
            android:layout_width="360dp"
            android:layout_height="48dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/style_edittext"
            android:ems="10"
            android:hint="@string/Apellidos"
            android:paddingStart="10dp"
            android:textColor="@color/BackgroundPrimary" />

        <EditText
            android:id="@+id/G_nero"
            android:layout_width="360dp"
            android:layout_height="48dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/style_edittext"
            android:ems="10"
            android:hint="@string/g_nero"
            android:paddingStart="10dp"
            android:textColor="@color/BackgroundPrimary" />

        <EditText
            android:id="@+id/Edad"
            android:layout_width="360dp"
            android:layout_height="48dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/style_edittext"
            android:ems="10"
            android:hint="@string/Edad"
            android:paddingStart="10dp"
            android:textColor="@color/BackgroundPrimary" />

        <EditText
            android:id="@+id/Fch_nacimiento"
            android:layout_width="360dp"
            android:layout_height="48dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/style_edittext"
            android:ems="10"
            android:hint="@string/fecha_de_nacimiento"
            android:paddingStart="10dp"
            android:textColor="@color/BackgroundPrimary" />

        <EditText
            android:id="@+id/Eps_afilia"
            android:layout_width="360dp"
            android:layout_height="48dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/style_edittext"
            android:ems="10"
            android:hint="@string/eps_aficilia"
            android:paddingStart="10dp"
            android:textColor="@color/BackgroundPrimary" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="400dp"
        android:layout_height="140dp"
        android:layout_marginTop="25dp"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/Sigui"
            android:layout_width="272dp"
            android:layout_height="70dp"
            android:backgroundTint="@color/BackgroundBotones"
            android:fontFamily="serif"
            android:text="@string/Sigui"
            android:textSize="28sp"
            android:textStyle="bold"
            app:strokeColor="@color/BordeBotones"
            app:strokeWidth="3dp" />

            <TextView
                android:id="@+id/Regre_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="serif"
                android:text="@string/regre_login"
                android:textColor="@color/BackgroundBotones"
                android:textSize="18sp" />

    </LinearLayout>

</LinearLayout>