<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/BackgroundPrimary"

    android:gravity="center"
    android:orientation="vertical"
    tools:context=".activities.ui.inicio.InicioActivity">

    <ImageView
        android:id="@+id/logoHome"
        android:layout_width="202dp"
        android:layout_height="210dp"
        android:layout_marginTop="-40dp"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/MindSoulHeart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="serif"
        android:text="@string/BienvenidaApp"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="34sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/MsjInvitacion"
        android:layout_width="339dp"
        android:layout_height="85dp"
        android:layout_marginTop="65dp"
        android:fontFamily="serif"
        android:text="@string/MsjInvitacion"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="20sp"/>

    <Button
        android:id="@+id/btnSiguienteLogin"
        android:layout_width="272dp"
        android:layout_height="70dp"
        android:layout_marginTop="65dp"
        android:backgroundTint="@color/BackgroundBotones"
        android:fontFamily="serif"
        android:text="@string/btnSiguienteLogin"
        android:textSize="28sp"
        android:textStyle="bold"
        app:strokeColor="@color/BordeBotones"
        app:strokeWidth="3dp" />

    <TextView
        android:id="@+id/MsjRegistro"
        android:layout_width="238dp"
        android:layout_height="27dp"
        android:layout_marginTop="60dp"
        android:fontFamily="serif"
        android:text="@string/MnjInvitacion2"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="20sp" />

</LinearLayout>
